# microbiome-summer-school-2017_mass-spec

./: LICENSE  README.md  _config.yml  install.sh  install_without_conda.sh  microbiome-summer-school-2017_mass-spectrometry.ipynb
example/: dataset.h5  microbiome-summer-school-2017_mass-spectrometry.ipynb
example/tutorial_code/: alignment.py  spectrum.py  spectrum_io.py  spectrum_utils.py  utils.py  virtual_lock_mass.py
example/tutorial_code/cpp_extensions/: ActiveSequence.cpp  ActiveSequence.h  CMakeLists.txt  Heap.cpp  Heap.h  READ_ME.txt  alignment.cpp  main
example/tutorial_code/cpp_extensions/Tests/: CMakeLists.txt  heap_test.cpp
sections/conclusion/: README.md
sections/introduction/: README.md
sections/machine_learning/: README.md
sections/vlm_align/: README.md
